# stopeight

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  MANIFEST.in  README.md  __init__.py  acquisition.html  analyzer.html  applications.html  build.html  build_analyzer.html  build_comparator.html  build_latex.html  build_legacy.html  build_qt4.html  build_server.html  build_stopeight.html  build_stroke-analyzer.html  build_win.html  client_deleteLine_test.py  client_deleteLine_test.py~  client_getLine_test.py  client_getLine_test.py~  client_matchLine_test.py  client_matchLine_test.py~  client_saveLine_test.py  client_saveLine_test.py~  cmake.py  cmake_example.py  comparator.html  db_python_elixir.sql  dev_analyzer-specs.html  dev_analyzer.html  dev_build.html  dev_comparator.html  dev_doc.html  dev_stroke-analyzer.html  developer.html  editor.html  (+46 more)
.github/workflows/: conda-build.yml  pypi-bdist_wheel.yml  pypi-publish.yml  pypi-sdist.yml  pythonpackage.yml  pythonpublish.yml
_extra/: robots.html
_modules/: index.html  server_soap.html
_sources/: acquisition.txt  analyzer.txt  applications.txt  build_comparator.txt  build_latex.txt  build_qt4.txt  build_server.txt  build_stopeight.txt  build_stroke-analyzer.txt  build_win.txt  comparator.txt  dev_analyzer-specs.txt  dev_analyzer.txt  dev_build.txt  dev_doc.txt  dev_stroke-analyzer.txt  developer.txt  editor.txt  function-graph.txt  index.txt  installation.txt  run_comparator.txt  run_editor.txt  run_server.txt  run_tests.txt  sample-data.txt  scripts.txt  stopeight.txt  stroke-analyzer.txt  theory.txt  vector-graph.txt  vector-graph_add.txt  vector-graph_sumonly.txt
_static/: default.css
conda.recipe/: meta.yaml
doc/: Makefile  acquisition.txt  analyzer.txt  applications.txt  build.txt  build_analyzer.txt  build_latex.txt  build_legacy.txt  build_server.txt  build_stopeight.txt  build_stroke-analyzer.txt  build_win.txt  comparator.txt  conf.py  dev_analyzer.txt  dev_build.txt  dev_comparator.txt  dev_doc.txt  dev_stroke-analyzer.txt  developer.txt  index.txt  installation.txt  make.bat  run_editor.txt  run_tests.txt  sample-data.txt  scripts.txt  stopeight.txt  stroke-analyzer.txt  theory.txt  vector-graph.txt
doc/_templates/: layout.html
doc/latex/: Antis.tex  Not_Used.tex  Simulation.tex  Spline_Axioms.tex  Stopeight.bib  Stopeight.tex  Stopeight_Analyzer.bib  Stopeight_Analyzer.tex  Stopeight_Comparator.tex  Stopeight_Grapher.tex  Woodpecker.tex
doc/mathematica/: Representation_Circles.m  Representation_Parallelogram.m  Spline.m  Spline_Analytic.nb  Spline_Bernstein.nb  Spline_CharacteristicPolynomials.nb  Spline_EVConstraint.nb  Spline_Eigensystems.nb  Spline_Generative.nb  Spline_Pascal.nb  Spline_Representation.nb  SubSpaces.m
rails-models/: db_rails_rake.sql  line.rb  point.rb  schema.rb
server/: elixirTools.py  requestProcessing.py  server_include.py  server_soap.py  symbolTools.py  zodbTools.py  zsiServer.py
stopeight/: __init__.py  logging.py
stopeight/analyzer/: SVG.py  TCT_printer.py  editor.py  file.py  scribble2.py  tableau_printer.py
stopeight/comparator/: __init__.py  lineMatch.py  matrix.py  matrixTools.py  matrixTools_new.py  shapeMatch.py  shapeMatchSubSection.py  vectorTools.py
stopeight/logging/: __init__.py  logSwitch.py  logging.conf  server.conf
stopeight/multiprocessing/: __init__.py  pooling.py
stopeight/server/: __init__.py  client_deleteLine_test.py  client_getLine_test.py  zsiTools.py  (+8 more)
tests/: test_editor.py
(+61 files in other folders)
