#always building extensions in-place would break installation of the module distribution
#[build_ext]
#inplace=0

[metadata]
Metadata-Version = 2.1
name = stopeight
description = stopeight: Comparing sequences of points in 2 dimensions
long_description = stopeight: Comparing sequences of points in 2 dimensions by visually overlapping them using matrix transformations (translation, scaling and rotation) and getting a boolean result.
keywords = signal-analysis time-series pen-stroke
author = Fassio Blatter
author_email = fassio@specpose.com
license = GNU General Public License, version 2
url = https://github.com/specpose/stopeight
project_urls =
    Documentation = https://specpose.github.io/stopeight
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
python_requires = >=3.5
